added package build with vite

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <script src="../index.js"></script>
+        <script src="index.js" type="module"></script>
         <style>
             json-tree {
                 color: blue;
@@ -20,7 +20,7 @@
             "
         ></json-tree>
 
-        <script>
+        <script type="module">
             const tree = document.querySelector('json-tree');
             tree.data = [1, 2, 3];
         </script>
